--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,20 +11,25 @@
         android:roundIcon="@drawable/splash"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposeUIChallenge"
-        tools:targetApi="31" >
-
-
+        tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".OnBoardingActivity"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.JetpackComposeUIChallenge" >
+            android:label="@string/title_activity_on_boarding"
+            android:theme="@style/Theme.JetpackComposeUIChallenge"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.JetpackComposeUIChallenge"
+            android:windowSoftInputMode="adjustResize">
         </activity>
     </application>
 
